--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -121,8 +121,7 @@
   "IdInformation": "ID Information",
   "PassportNumber": "Passport Number",
   "TravelDocumentNumber": "Travel Document Number",
-  "IdExpirationDate": "ID Expiration Date",
-  "IdIssuingCountry": "ID Issuing Country",
+  
   "IdentificationCard": "Identification Card",
   "TravelDocument": "Travel Document",
   "SelectDocumentType": "Select a document type",
@@ -130,17 +129,17 @@
   "FirstName": "First Name",
   "LastName": "Last Name",
   "MiddleName": "Middle Name",
-  "OtherNamesLabel": "Other Names",
-  "OtherNames": "Add any other names used",
+  "NamesUsedBeforeLabel": "Other Names",
+  "NamesUsedBefore": "Add any other names used",
 
-  "IDInformation": "ID Information",
-  "IDExpirationDate": "ID Expiration Date",
-  "IDIssuingCountry": "ID Issuing Country",
+  "ExpirationDateLabel": "ID Expiration Date",
+  "ExpirationDate": "MM/DD/YYYY",
+  "PassportIssueCountryLabel": "ID Issuing Country",
 
   "InformationOfBirth": "Information of Birth",
-  "DateOfBirth": "Date of Birth",
+  "BirthDate": "Date of Birth",
   "Gender": "Gender",
-  "LocationOfBirth": "Location of Birth",
+  "CityAndCountryOfBirth": "Location of Birth",
 
   "PersonalDemographics": "Personal Demographics",
   "Race": "Race",
