Add employment information

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -111,7 +111,8 @@
   "ParentsInformation": "父母信息",
   "SiblingsInformation": "兄弟姐妹",
   "BackgroundInformation": "背景信息",
-  "AddressInformation": "地址信息",
+  "AddressInformationI": "地址信息 I",
+  "AddressInformationII": "地址信息 II",
   "EducationInformation": "教育信息",
   "EmploymentInformation": "就业信息",
   "ApplicationInformation": "申请信息",
