--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -108,7 +108,8 @@
   "ParentsInformation": "Parents",
   "SiblingsInformation": "Siblings",
   "BackgroundInformation": "Background",
-  "AddressInformation": "Address",
+  "AddressInformationI": "Address I",
+  "AddressInformationII": "Address II",
   "EducationInformation": "Education",
   "EmploymentInformation": "Employment",
   "ApplicationInformation": "Application",
