Add translations to some words

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -420,5 +420,26 @@
   "ImmigrationCourt": "移民法庭",
   "ImmigrationCourtNever": "我从未参加过移民法庭程序。",
   "ImmigrationCourtNow": "我目前正在移民法庭程序中。",
-  "ImmigrationCourtPast": "我现在不在移民法庭程序中，但我过去曾经参加过。"
+  "ImmigrationCourtPast": "我现在不在移民法庭程序中，但我过去曾经参加过。",
+  "Signature": "签名",
+  "PrintCompleteName": "你的完整姓名",
+  "NameInNativeAlphabet": "用您的母语写下您的名字",
+  "FamilyMemberAssist": "您的配偶、父母或子女是否协助您完成此申请？",
+  "ListNameAndRelationship": "列出协助您的家庭成员的姓名和关系",
+  "Date": "日期",
+  "Declaration": "声明",
+  "PreparerInformation": "准备人信息",
+  "PreparerSignature": "准备人签名",
+  "PrintCompleteNameOfPreparer": "准备人的完整姓名",
+  "DaytimeTelephoneNumber": "电话号码",
+  "AddressOfPreparer": "准备人地址",
+  "StreetNumberAndNameOfPreparer": "街道号码和名称",
+  "G28FormAttached": "如果附有G-28表格，请选择此框。",
+  "AttorneyStateBarNumber": "律师或授权代表的State Bar Number(如果有)",
+  "AttorneyStateBarNumberPlaceholder": "律师或授权代表的State Bar Number",
+  "AttorneyUscisOnlineAccountNumber": "律师或授权代表的USCIS在线账户号码(如果有)",
+  "AttorneyUscisOnlineAccountNumberPlaceholder": "USCIS在线账户号码",
+  "Next": "下一步",
+  "Previous": "上一步",
+  "Save": "保存"
 }
