--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -421,5 +421,26 @@
   "ImmigrationCourt": "Immigration Court",
   "ImmigrationCourtNever": "I have never been in Immigration Court proceedings.",
   "ImmigrationCourtNow": "I am now in Immigration Court proceedings.",
-  "ImmigrationCourtPast": "I am not now in Immigration Court proceedings, but I have been in the past"
+  "ImmigrationCourtPast": "I am not now in Immigration Court proceedings, but I have been in the past",
+  "Signature": "Signature",
+  "PrintCompleteName": "Print your complete name",
+  "NameInNativeAlphabet": "Write your name in your native alphabet",
+  "FamilyMemberAssist": "Did your spouse, parent, or child(ren) assist you in completing this application?",
+  "ListNameAndRelationship": "List the name and relationship of the member(s) of your family who assisted you",
+  "Date": "Date",
+  "Declaration": "Declaration",
+  "PreparerInformation": "Preparer Information",
+  "PreparerSignature": "Signature of Preparer",
+  "PrintCompleteNameOfPreparer": "Print Complete Name of Preparer",
+  "DaytimeTelephoneNumber": "Daytime Telephone Number",
+  "AddressOfPreparer": "Address of Preparer",
+  "StreetNumberAndNameOfPreparer": "Street Number and Name",
+  "G28FormAttached": "Select this box if Form G-28 is attached.",
+  "AttorneyStateBarNumber": "Attorney State Bar Number (if applicable)",
+  "AttorneyStateBarNumberPlaceholder": "Attorney State Bar Number",
+  "AttorneyUscisOnlineAccountNumber": "Attorney or Accredited Representative USCIS Online Account Number (if any)",
+  "AttorneyUscisOnlineAccountNumberPlaceholder": "USCIS Online Account Number",
+  "Next": "Next",
+  "Previous": "Previous",
+  "Save": "Save"
 }
