--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -421,12 +421,46 @@
   "ImmigrationCourtNever": "我从未参加过移民法庭程序。",
   "ImmigrationCourtNow": "我目前正在移民法庭程序中。",
   "ImmigrationCourtPast": "我现在不在移民法庭程序中，但我过去曾经参加过。",
+  "AsylumBasedOn": "我根据以下原因寻求庇护或暂缓遣返：",
+  "HasExperiencedHarm": "您、您的家人或亲密的朋友或同事是否曾经遭受过任何人的伤害、虐待或威胁？",
+  "ExplainedHarmedIncident": "详细说明：\n1. 发生了什么；\n2. 伤害、虐待或威胁发生的时间；\n3. 谁造成了伤害、虐待或威胁；\n4. 为什么您认为发生了伤害、虐待或威胁。",
+  "FearReturnHome": "如果您返回您的祖国，您是否担心受到伤害或虐待？",
+  "ExplainFearReturnHome": "如果是\"是\"，请详细说明：1. 您担心的伤害或虐待是什么；2. 您认为会对您造成伤害或虐待的人是谁；3. 您为什么认为您会受到伤害或虐待",
+  "FamilyMemberCharged": "您或您的家庭成员是否曾在美国以外的任何国家被指控、被控、被逮捕、被拘留、被询问、被定罪和判刑、或被监禁（包括移民法违规）？",
+  "ExplainFamilyMemberCharged": "如果是\"是\"，请解释行动的情况和原因。",
+  "YouOrFamilyBelongToGroup": "您或您的家庭成员是否曾经属于或与您所在国家的任何组织或团体有关，例如政党、学生团体、工会、宗教组织、军事或准军事组织、民防组织、游击组织、种族群体、人权组织、新闻媒体等（但不限于此）？",
+  "ExplainYouOrFamilyBelongToGroup": "如果是\"是\"，请为每个人描述参与程度、任何领导或其他职位以及您或您的家庭成员在每个组织或活动中参与的时间。",
+  "YouOrFamilyContinueBelongToGroup": "您或您的家庭成员是否继续以任何方式参与这些组织或团体？",
+  "ExplainYouOrFamilyContinueBelongToGroup": "如果是\"是\"，请为每个人描述您或您的家庭成员目前的参与程度、任何当前担任的领导或其他职位以及您或您的家庭成员参与每个组织或团体的时间。",
+  "AfraidOfBeingTorturedWhenReturned": "您是否担心在您的祖国或任何其他可能被遣返的国家受到酷刑？",
+  "ExplainAfraidOfBeingTorturedWhenReturned": "如果是\"是\"，请解释您为什么担心以及您所担心的酷刑的性质、由谁实施以及为什么会实施。",
+  "AppliedRefugeeOrAsylumBefore": "您、您的配偶、您的子女、您的父母或您的兄弟姐妹是否曾向美国政府申请过难民身份、庇护或暂缓遣返？",
+  "ExplainAppliedRefugeeOrAsylumBefore": "如果是\"是\"，请解释决定以及您、您的配偶、您的子女、您的父母或您的兄弟姐妹作为该决定结果而获得的任何身份的情况。请说明您是否包含在父母或配偶的申请中。如果是，请在回答中包括您父母或配偶的A号码。如果您曾被移民法官或移民局上诉委员会拒绝庇护，请描述自拒绝日期以来您所在国家的情况或您个人情况的任何变化，这可能会影响您的庇护资格。",
+  "TravelOtherCountryBeforeUS": "在离开您声称庇护的国家后，您或您现在在美国的配偶或子女是否曾经在其他国家旅行或居住过？",
+  "AnyLawfulStatusAnyCountry": "您、您的配偶、您的子女或其他家庭成员（例如父母或兄弟姐妹）是否曾在除您现在声称庇护的国家以外的任何国家申请或获得过任何合法身份？",
+  "ExplainAnyLawfulStatusAnyCountry": "如果对问题2A和/或2B的答案是\"是\"，请为每个人提供以下信息：每个国家的名称和停留时间、该人在那里的身份、离开的原因、该人是否有权返回以进行合法居住、该人是否在那里申请了难民身份或庇护，如果没有，请说明他或她为什么没有这样做。",
+  "HaveHarmedOthers": "您、您的配偶或您的子女是否曾因种族、宗教、国籍、特定社会群体成员身份或特定政治观点的信仰而命令、煽动、协助或以其他方式参与对任何人造成伤害或痛苦？",
+  "ExplainHaveHarmedOthers": "如果是\"是\"，请详细描述每个事件以及您、您配偶或您的子女的参与程度。",
+  "ReturnCountryAfterBeingHarmed": "在您离开受到伤害或担心受到伤害的国家后，您是否返回过该国家？",
+  "ExplainReturnCountryAfterBeingHarmed": "如果是\"是\"，请详细描述您访问的情况（例如，旅行日期、旅行目的以及在该国家逗留的时间）。",
+  "AppliedOneYearAfterYourLastArrival": "您是否在最后一次抵达美国后的1年内提交此申请？",
+  "ExplainAppliedOneYearAfterYourLastArrival": "如果是\"是\"，请解释为什么您没有在抵达后的第一年内提交申请。您必须准备好在面试或听证会上解释为什么您没有在抵达后的第一年内提交庇护申请。有关回答此问题的指导，请参阅说明书第1部分：提交说明，第V节\"填写表格\"，第C部分。",
+  "HaveCommittedCrime": "您或申请中包括的任何家庭成员是否曾在美国犯下任何罪行和/或被逮捕、被控、被定罪或被判刑（包括移民法违规）？",
+  "ExplainHaveCommittedCrime": "如果是\"是\"，请在回答中具体说明每个情况：发生了什么和情况、日期、判刑长度、地点、拘留或监禁的持续时间、拘留或定罪的原因、针对您或您申请中的亲属提出的任何正式指控以及释放的原因。如果有相关文件，请附上这些事件的文件；如果没有文件，请解释为什么没有文件。",
+
   "Signature": "签名",
   "PrintCompleteName": "你的完整姓名",
   "NameInNativeAlphabet": "用您的母语写下您的名字",
   "FamilyMemberAssist": "您的配偶、父母或子女是否协助您完成此申请？",
   "ListNameAndRelationship": "列出协助您的家庭成员的姓名和关系",
+  "AddMember": "添加一位家庭成员",
+  "Name": "姓名",
+  "Relationship": "关系",
+  "FamilyMember": "家庭成员",
+  "OtherPeopleAssist": "除了您的配偶、父母或子女之外，是否有其他人为您准备了此申请？",
+  "ProvideCounsel": "庇护申请人可以由律师代理。您是否已经收到一份可能以很少或没有费用为您提供帮助的人员名单，以协助您的庇护申请？",
   "Date": "日期",
+
   "Declaration": "声明",
   "PreparerInformation": "准备人信息",
   "PreparerSignature": "准备人签名",
@@ -441,5 +475,7 @@
   "AttorneyUscisOnlineAccountNumberPlaceholder": "USCIS在线账户号码",
   "Next": "下一步",
   "Previous": "上一步",
-  "Save": "保存"
+  "Save": "保存",
+  "Yes": "是",
+  "No": "否"
 }
