--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -422,12 +422,47 @@
   "ImmigrationCourtNever": "I have never been in Immigration Court proceedings.",
   "ImmigrationCourtNow": "I am now in Immigration Court proceedings.",
   "ImmigrationCourtPast": "I am not now in Immigration Court proceedings, but I have been in the past",
+
+  "AsylumBasedOn": "I am seeking asylum or withholding of removal based on:",
+  "HasExperiencedHarm": "Have you, your family, or close friends or colleagues ever experienced harm or mistreatment or threats in the past by anyone?",
+  "ExplainedHarmedIncident": "Explain in detail: \n1. What happened; \n2. When the harm or mistreatment or threats occurred; \n3. Who caused the harm or mistreatment or threats; and \n4. Why you believe the harm or mistreatment or threats occurred.",
+  "FearReturnHome": "Do you fear harm or mistreatment if you return to your home country?",
+  "ExplainFearReturnHome": "If \"Yes,\" explain in detail: 1. What harm or mistreatment you fear; 2. Who you believe would harm or mistreat you; and 3. Why you believe you would or could be harmed or mistreated",
+  "FamilyMemberCharged": "Have you or your family members ever been accused, charged, arrested, detained, interrogated, convicted and sentenced, or imprisoned in any country other than the United States (including for an immigration law violation)?",
+  "ExplainFamilyMemberCharged": "If \"Yes,\" explain the circumstances and reasons for the action.",
+  "YouOrFamilyBelongToGroup": "Have you or your family members ever belonged to or been associated with any organizations or groups in your home country, such as, but not limited to, a political party, student group, labor union, religious organization, military or paramilitary group, civil patrol, guerrilla organization, ethnic group, human rights group, or the press or media?",
+  "ExplainYouOrFamilyBelongToGroup": "If \"Yes,\" describe for each person the level of participation, any leadership or other positions held, and the length of time you or your family members were involved in each organization or activity.",
+  "YouOrFamilyContinueBelongToGroup": "Do you or your family members continue to participate in any way in these organizations or groups?",
+  "ExplainYouOrFamilyContinueBelongToGroup": "If \"Yes,\" describe for each person your or your family members' current level of participation, any leadership or other positions currently held, and the length of time you or your family members have been involved in each organization or group.",
+  "AfraidOfBeingTorturedWhenReturned": "Are you afraid of being subjected to torture in your home country or any other country to which you may be returned?",
+  "ExplainAfraidOfBeingTorturedWhenReturned": "If \"Yes,\" explain why you are afraid and describe the nature of torture you fear, by whom, and why it would be inflicted.",
+  "AppliedRefugeeOrAsylumBefore": "Have you, your spouse, your child(ren), your parents or your siblings ever applied to the U.S. Government for refugee status, asylum, or withholding of removal? ",
+  "ExplainAppliedRefugeeOrAsylumBefore": "If \"Yes,\" explain the decision and what happened to any status you, your spouse, your child(ren), your parents, or your siblings received as a result of that decision. Indicate whether or not you were included in a parent or spouse's application. If so, include your parent or spouse's A-number in your response. If you have been denied asylum by an immigration judge or the Board of Immigration Appeals, describe any change(s) in conditions in your country or your own personal circumstances since the date of the denial that may affect your eligibility for asylum.",
+  "TravelOtherCountryBeforeUS": "After leaving the country from which you are claiming asylum, did you or your spouse or child(ren) who are now in the United States travel through or reside in any other country before entering the United States?",
+  "AnyLawfulStatusAnyCountry": " Have you, your spouse, your child(ren), or other family members, such as your parents or siblings, ever applied for or received any lawful status in any country other than the one from which you are now claiming asylum?",
+  "ExplainAnyLawfulStatusAnyCountry": "If \"Yes\" to either or both questions (2A and/or 2B), provide for each person the following: the name of each country and the length of stay, the person's status while there, the reasons for leaving, whether or not the person is entitled to return for lawful residence purposes, and whether the person applied for refugee status or for asylum while there, and if not, why he or she did not do so.",
+  "HaveHarmedOthers": "Have you, your spouse or your child(ren) ever ordered, incited, assisted or otherwise participated in causing harm or suffering to any person because of his or her race, religion, nationality, membership in a particular social group or belief in a particular political opinion?",
+  "ExplainHaveHarmedOthers": "If \"Yes,\" describe in detail each such incident and your own, your spouse's, or your child(ren)'s involvement.",
+  "ReturnCountryAfterBeingHarmed": "After you left the country where you were harmed or fear harm, did you return to that country?",
+  "ExplainReturnCountryAfterBeingHarmed": "If \"Yes,\" describe in detail the circumstances of your visit(s) (for example, the date(s) of the trip(s), the purpose(s) of the trip(s), and the length of time you remained in that country for the visit(s).)",
+  "AppliedOneYearAfterYourLastArrival": "Are you filing this application more than 1 year after your last arrival in the United States?",
+  "ExplainAppliedOneYearAfterYourLastArrival": "If \"Yes,\" explain why you did not file within the first year after you arrived. You must be prepared to explain at your interview or hearing why you did not file your asylum application within the first year after you arrived. For guidance in answering this question, see Instructions, Part 1: Filing Instructions, Section V. \"Completing the Form,\" Part C.",
+  "HaveCommittedCrime": " Have you or any member of your family included in the application ever committed any crime and/or been arrested, charged, convicted, or sentenced for any crimes in the United States (including for an immigration law violation)?",
+  "ExplainHaveCommittedCrime": "If \"Yes,\" for each instance, specify in your response: what occurred and the circumstances, dates, length of sentence received, location, the duration of the detention or imprisonment, reason(s) for the detention or conviction, any formal charges that were lodged against you or your relatives included in your application, and the reason(s) for release. Attach documents referring to these incidents, if they are available, or an explanation of why documents are not available.",
+
   "Signature": "Signature",
   "PrintCompleteName": "Print your complete name",
   "NameInNativeAlphabet": "Write your name in your native alphabet",
   "FamilyMemberAssist": "Did your spouse, parent, or child(ren) assist you in completing this application?",
   "ListNameAndRelationship": "List the name and relationship of the member(s) of your family who assisted you",
+  "AddMember": "Add a family member",
+  "Name": "Name",
+  "Relationship": "Relationship",
+  "FamilyMember": "Family Member",
+  "OtherPeopleAssist": "Did someone other than your spouse, parent, or child(ren) prepare this application?",
+  "ProvideCounsel": "Asylum applicants may be represented by counsel. Have you been provided with a list of persons who may be available to assist you, at little or no cost, with your asylum claim?",
   "Date": "Date",
+
   "Declaration": "Declaration",
   "PreparerInformation": "Preparer Information",
   "PreparerSignature": "Signature of Preparer",
@@ -442,5 +477,7 @@
   "AttorneyUscisOnlineAccountNumberPlaceholder": "USCIS Online Account Number",
   "Next": "Next",
   "Previous": "Previous",
-  "Save": "Save"
+  "Save": "Save",
+  "Yes": "Yes",
+  "No": "No"
 }
