Translate the personal and spouse

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -80,7 +80,7 @@
   "VerificationCode": "验证码",
   "PhoneNumber": "电话号码",
   "InputConfirmationCode": "请输入发送到以下地址的验证码：",
-  "UploadPassport": "上传护照",
+  "UploadPassportOrOtherID": "上传护照或者其他身份证明",
   "UploadPassportDescription1": "上传您的业务代表的护照正面图片。这些图片将用于身份验证。",
   "UploadPassportDescription2": "确保您的图片包括身份证正面的所有信息，包括任何签名。图片也需要清晰，没有任何扭曲或模糊的部分。",
   "NoPassport": "我没有护照",
@@ -132,15 +132,15 @@
   "NamesUsedBeforeLabel": "曾用名",
   "NamesUsedBefore": "添加一个曾用名",
 
-  "ExpirationDateLabel": "证件到期日期",
-  "ExpirationDate": "MM/DD/YYYY",
+  "MM/DD/YYYY": "MM/DD/YYYY",
+  "IDExpirationDate": "证件到期日期",
   "PassportIssueCountryLabel": "证件签发国家",
   "PassportIssueCountry": "证件签发国家",
 
   "InformationOfBirth": "出生信息",
   "BirthDate": "出生日期",
   "Gender": "性别",
-  "CityAndCountryOfBirth": "出生地点",
+  "CityAndCountryOfBirth": "出生城市和国家",
 
   "PersonalDemographics": "特征",
   "Race": "种族",
@@ -156,6 +156,8 @@
   "OtherFluentLanguagesLabel": "其他流利语言",
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
 
+  "UploadSpousePassportOrOtherID": "上传配偶的护照或其他身份证明",
+  "SpouseIsInUS": "配偶是否在美国?",
   "Male": "男",
   "Female": "女",
   "MaritalStatus": "婚姻状况",
@@ -163,6 +165,19 @@
   "Married": "已婚",
   "Divorced": "离异",
   "Widowed": "丧偶",
+  "Marriage": "婚姻",
+  "MarriageDate": "婚姻日期",
+  "MarriagePlace": "婚姻地点",
+  "PlaceOfLastEntryIntoUS": "最后一次进入美国的地点",
+  "DateOfLastEntryIntoUS": "最后一次进入美国的日期",
+  "LastAdmittedStatus": "最后一次入境的身份",
+  "VisaTypeIfAny": "如果有的话，签证类型",
+  "WhatsSpouseCurrentStatus": "您配偶的当前身份是什么？",
+  "WhatsExpirationDate": "如果有的话，他/她的合法逗留到期日期是什么？",
+  "IsSpouseImmigrationCourt": "您的配偶是否在移民法庭程序中？",
+  "DateOfPreviousArrival": "如果之前在美国，请提供上次抵达的日期",
+  "IsSpouseIncludedInApplication": "您的配偶是否包含在此申请中？",
+  "SpecifyLocationIfNotInUS": "如果不在美国，请填写位置",
 
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
@@ -409,18 +424,27 @@
   "InCareOfName": "收件人姓名",
   "MailingAddressInUs": "美国邮寄地址",
 
-  "AlienRegistrationNumberLabel": "外国人注册号码",
-  "AlienRegistrationNumber": "如适用，请填写",
-  "UscisOnlineAccountNumberLabel": "美国公民及移民服务局在线账户号码",
-  "UscisOnlineAccountNumber": "如适用，请填写",
-  "I94NumberLabel": "I-94 号码",
-  "I94Number": "如适用，请填写",
-  "SSNLabel": "社会安全号码",
-  "SSN": "如适用，请填写",
+  "EnterIfApplicable": "如适用，请填写",
+
+  "AlienRegistrationNumber": "外国人注册号码",
+  "UscisOnlineAccountNumber": "美国公民及移民服务局在线账户号码",
+  "I94Number": "I-94 号码",
+  "SSN": "社会安全号码",
   "ImmigrationCourt": "移民法庭",
   "ImmigrationCourtNever": "我从未参加过移民法庭程序。",
   "ImmigrationCourtNow": "我目前正在移民法庭程序中。",
   "ImmigrationCourtPast": "我现在不在移民法庭程序中，但我过去曾经参加过。",
+
+  "MailingAddressSameAsResidentialAddress": "邮寄地址与居住地址相同",
+
+  "I94": "I-94",
+  "WhenLastLeaveCountry": "您上次离开您的国家是什么时候？",
+  "EntryRecordsDescription": "列出每次进入美国的记录，从最近的记录开始。对于每次进入，列出日期（mm/dd/yyyy）、地点和您的身份。（如有需要，请附加额外的表格。）",
+  "EntryRecords": "入境记录",
+  "Date": "日期",
+  "Place": "地点",
+  "Status": "状态",
+
   "AsylumBasedOn": "我根据以下原因寻求庇护或暂缓遣返：",
   "HasExperiencedHarm": "您、您的家人或亲密的朋友或同事是否曾经遭受过任何人的伤害、虐待或威胁？",
   "ExplainedHarmedIncident": "详细说明：\n1. 发生了什么；\n2. 伤害、虐待或威胁发生的时间；\n3. 谁造成了伤害、虐待或威胁；\n4. 为什么您认为发生了伤害、虐待或威胁。",
@@ -459,7 +483,6 @@
   "FamilyMember": "家庭成员",
   "OtherPeopleAssist": "除了您的配偶、父母或子女之外，是否有其他人为您准备了此申请？",
   "ProvideCounsel": "庇护申请人可以由律师代理。您是否已经收到一份可能以很少或没有费用为您提供帮助的人员名单，以协助您的庇护申请？",
-  "Date": "日期",
 
   "Declaration": "声明",
   "PreparerInformation": "准备人信息",
