--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -80,7 +80,7 @@
   "VerificationCode": "Verification Code",
   "PhoneNumber": "Phone Number",
   "InputConfirmationCode": "Please input the verification code sent to: ",
-  "UploadPassport": "Upload Passport",
+  "UploadPassportOrOtherID": "Upload passport or other identity document",
   "UploadPassportDescription1": "Upload images of the front side of your business representative's These images will be used for identity verification purposes.",
   "UploadPassportDescription2": "Be sure that your images include all information on the front side of your ID, including any signatures. Images also need to be clear, without any warped or blurred portions.",
   "NoPassport": "I don't have a passport",
@@ -133,15 +133,15 @@
   "NamesUsedBeforeLabel": "Other Names",
   "NamesUsedBefore": "Add any other names used",
 
-  "ExpirationDateLabel": "ID Expiration Date",
-  "ExpirationDate": "MM/DD/YYYY",
+  "MM/DD/YYYY": "MM/DD/YYYY",
+  "IDExpirationDate": "ID Expiration Date",
   "PassportIssueCountryLabel": "ID Issuing Country",
   "PassportIssueCountry": "Passport Issue Country",
 
   "InformationOfBirth": "Information of Birth",
   "BirthDate": "Date of Birth",
   "Gender": "Gender",
-  "CityAndCountryOfBirth": "Location of Birth",
+  "CityAndCountryOfBirth": "City and Country of Birth",
 
   "PersonalDemographics": "Personal Demographics",
   "Race": "Race",
@@ -157,6 +157,8 @@
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
 
+  "UploadSpousePassportOrOtherID": "Upload spouse's passport or other identity document",
+  "SpouseIsInUS": "Is this person in the U.S.?",
   "Male": "Male",
   "Female": "Female",
   "MaritalStatus": "Marital Status",
@@ -164,6 +166,19 @@
   "Married": "Married",
   "Divorced": "Divorced",
   "Widowed": "Widowed",
+  "Marriage": "Marriage",
+  "MarriageDate": "Date of Marriage",
+  "MarriagePlace": "Place of Marriage",
+  "PlaceOfLastEntryIntoUS": "Place of last entry into the U.S.",
+  "DateOfLastEntryIntoUS": "Date of last entry into the U.S.",
+  "LastAdmittedStatus": "Status when last admitted",
+  "VisaTypeIfAny": "Visa type, if any",
+  "WhatsSpouseCurrentStatus": "What is your spouse's current status?",
+  "WhatsExpirationDate": "What is the expiration date of his/her authorized stay, if any?",
+  "IsSpouseImmigrationCourt": "Is your spouse in Immigration Court proceedings?",
+  "DateOfPreviousArrival": "If previously in the U.S., date of previous arrival",
+  "IsSpouseIncludedInApplication": "Is your spouse to be included in this application?",
+  "SpecifyLocationIfNotInUS": "Specify location if not in the U.S.",
 
   "RaceOptions": [
     "American Indian or Alaska Native",
@@ -410,18 +425,26 @@
   "InCareOfName": "Recipient name",
   "MailingAddressInUs": "Mailing Address in US",
 
-  "AlienRegistrationNumberLabel": "Alien Registration Number",
-  "AlienRegistrationNumber": "Enter if applicable",
-  "UscisOnlineAccountNumberLabel": "USCIS Online Account Number",
-  "UscisOnlineAccountNumber": "Enter if applicable",
-  "I94NumberLabel": "I-94 Number",
-  "I94Number": "Enter if applicable",
-  "SSNLabel": "Social Security Number",
-  "SSN": "Enter if applicable",
+  "EnterIfApplicable": "Enter if applicable",
+
+  "AlienRegistrationNumber": "Alien Registration Number",
+  "UscisOnlineAccountNumber": "USCIS Online Account Number",
+  "I94Number": "I-94 Number",
+  "SSN": "Social Security Number",
   "ImmigrationCourt": "Immigration Court",
   "ImmigrationCourtNever": "I have never been in Immigration Court proceedings.",
   "ImmigrationCourtNow": "I am now in Immigration Court proceedings.",
   "ImmigrationCourtPast": "I am not now in Immigration Court proceedings, but I have been in the past",
+
+  "MailingAddressSameAsResidentialAddress": "Mailing Address is the same as Residential Address",
+
+  "I94": "I-94",
+  "WhenLastLeaveCountry": "When did you last leave your country?",
+  "EntryRecordsDescription": "List each entry into the U.S. beginning with your most recent entry. List date (mm/dd/yyyy), place, and your status for each entry. (Attach additional sheets as needed.)",
+  "EntryRecords": "Entry Records",
+  "Date": "Date",
+  "Place": "Place",
+  "Status": "Status",
 
   "AsylumBasedOn": "I am seeking asylum or withholding of removal based on:",
   "HasExperiencedHarm": "Have you, your family, or close friends or colleagues ever experienced harm or mistreatment or threats in the past by anyone?",
@@ -461,7 +484,6 @@
   "FamilyMember": "Family Member",
   "OtherPeopleAssist": "Did someone other than your spouse, parent, or child(ren) prepare this application?",
   "ProvideCounsel": "Asylum applicants may be represented by counsel. Have you been provided with a list of persons who may be available to assist you, at little or no cost, with your asylum claim?",
-  "Date": "Date",
 
   "Declaration": "Declaration",
   "PreparerInformation": "Preparer Information",
