--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -195,6 +195,9 @@
   "Deceased": "已故",
   "CurrentLocation": "当前位置",
 
+  "Sibling": "兄弟姐妹",
+  "AddASibling": "添加一个兄弟姐妹",
+
   "TelephoneNumberInUs": "美国电话号码",
   "PhoneNumberFormat": "(区号)-XXX-XXXX",
   "ResidentialAddressInUs": "美国居住地址",
@@ -208,6 +211,33 @@
   "MailingAddressInUs": "美国邮寄地址",
 
   "EnterIfApplicable": "如适用，请填写",
+
+  "School": "学校",
+  "AddASchool": "添加一所学校",
+  "MostRecentSchool": "列出您最近就读的学校",
+  "SchoolName": "学校名称",
+  "SchoolType": "学校类型",
+  "Location": "地点",
+  "SchoolAddress": "学校地址",
+  "AttendedFrom": "就读时间从",
+  "To": "到",
+
+  "Employment": "就业",
+  "AddEmployment": "添加就业",
+  "MostRecentEmployment": "提供过去5年的就业情况。首先列出您目前的就业情况。",
+  "NameAndAddressOfEmployer": "雇主名称和地址",
+  "Occupation": "您的职业",
+  "StartDate": "开始日期",
+  "EndDate": "结束日期",
+
+  "Address": "地址",
+  "AddAddress": "添加地址",
+  "AddressPast5Years": "列出过去5年的地址。首先列出您现在的地址。",
+  "NumberAndStreet": "门牌号和街道",
+  "CityOrTown": "城市/镇",
+  "DepartmentOrStateOrProvince": "部门、省份或州",
+  "Country": "国家",
+  "AddressBeforeUS": "请列出您来到美国之前居住的最后一个地址。如果这不是您担心迫害的国家，请同时列出您担心迫害的国家的最后一个地址。",
 
   "AlienRegistrationNumber": "外国人注册号码",
   "UscisOnlineAccountNumber": "美国公民及移民服务局在线账户号码",
@@ -286,6 +316,8 @@
   "No": "否",
 
   "Select a country": "选择一个国家",
+  "Select a city": "选择一个城市",
+  "Select a state": "选择一个州",
 
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
