--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -72,6 +72,7 @@
     "CodeRequired": "Please enter the verification code",
     "InvalidCodeFormat": "Verification code must be a 6-digit number"
   },
+  "NotApplicableText": "N/A",
   "Email": "Email",
   "Password": "Password",
   "NewPassword": "New Password",
